--- a/frontend/app/views/events/_form.html.erb
+++ b/frontend/app/views/events/_form.html.erb
@@ -18,6 +18,6 @@
 </section>
 
 
-<%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents"} %>
+<%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents", :template => "event_linked_agent"} %>
 
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_records"} %>
