--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -13,6 +13,7 @@
 </section>
 
 
+<%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents", :template => "accession_linked_agent"} %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates"} %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_documents"} %>
