--- a/frontend/app/views/shared/_subrecord_form.html.erb
+++ b/frontend/app/views/shared/_subrecord_form.html.erb
@@ -2,7 +2,8 @@
   singular = name.singularize
   section_id = form.id_for(name) if section_id.blank?
   heading_size = "h3" if heading_size.blank?
-  js_template_name = "template_#{singular}" if js_template_name.blank?
+  template = singular if template.blank?
+  js_template_name = "template_#{template}" if js_template_name.blank?
 %>
 
 <%= render :partial=>"#{name.to_s}/template", :locals => {:form => form} %>
@@ -16,7 +17,7 @@
 
   <div class="subrecord-form-container">
     <%= form.list_for(form[name], "#{name}[]") do |item| %>
-      <% form.emit_template(singular, item) %>
+      <% form.emit_template(template, item) %>
     <% end %>
   </div>
 
