--- a/frontend/app/views/archival_objects/_show_inline.html.erb
+++ b/frontend/app/views/archival_objects/_show_inline.html.erb
@@ -17,6 +17,10 @@
       <%= render :partial => "archival_objects/display/basic_information" %>
     </section>
 
+    <% if @archival_object.linked_agents.length > 0 %>
+      <%= render :partial => "linked_agents/show", :locals => { :linked_agents => @archival_object.linked_agents, :section_id => "archival_object_linked_agents_" } %>
+    <% end %>
+
     <% if @archival_object.extents.length > 0 %>
       <%= render :partial => "extents/show", :locals => { :extents => @archival_object.extents, :section_id => "archival_object_extents_" } %>
     <% end %>
