--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -1,6 +1,7 @@
 //= require jquery.cookie
 //= require jquery.ba-hashchange
 //= require jstree
+//= require agents.crud
 //= require subjects.crud
 //= require dates.crud
 //= require notes.crud
