--- a/frontend/app/views/digital_object_components/_form_container.html.erb
+++ b/frontend/app/views/digital_object_components/_form_container.html.erb
@@ -21,6 +21,8 @@
     <%= render :partial => "subjects/linker", :locals => { :form => form }%>
   </section>
 
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents", :template => "digital_object_component_linked_agent"} %>
+
   <%= render :partial => "notes/form", :locals => {:form => form} %>
 
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
