Refactor digital object tree to use shared widget; Change update_tree to simply update the node's parent (drag and drop reorder);

--- a/frontend/app/views/digital_object_components/_form_container.html.erb
+++ b/frontend/app/views/digital_object_components/_form_container.html.erb
@@ -8,7 +8,7 @@
 
   <%= form.hidden_input "parent" %>
   <%= form.hidden_input "digital_object" %>
-  <%= hidden_field_tag "do_id", @digital_object_component.id %>
+  <%= hidden_field_tag "id", @digital_object_component.id %>
 
   <section id="basic_information">
     <h3>Basic Information</h3>
