--- a/frontend/app/assets/javascripts/digital_objects.show.js.erb
+++ b/frontend/app/assets/javascripts/digital_objects.show.js.erb
@@ -1,168 +1,1 @@
-//= require jquery.cookie
-//= require jquery.ba-hashchange
-//= require jstree
-
-$(function() {
-
-  var $tree = $("#archives_tree"),
-      $container =$("#object_container"),
-      digital_object_tree_data = AS.tree_data["digital_object-id-"+$(".archives-tree").data("digital_object-id")];
-
-
-  var renderTree = function() {
-    $tree.html(AS.renderTemplate("tree_template", {tree: digital_object_tree_data}));
-  };
-
-
-  var loadPaneForNode = function(nodeEl) {
-    if (nodeEl.attr("rel") === "digital_object_component") {
-      $.ajax({
-        url: APP_PATH+"digital_object_components/"+nodeEl.data("id"),
-        type: 'GET',
-        data: {
-          inline: true,
-          digital_object_id: digital_object_tree_data.digital_object_id
-        },
-        success: function(html) {
-          $container.html(html);
-          renderTreeToolbar();
-        }
-      });
-    } else if (nodeEl.attr("rel") === "digital_object") {
-      $.ajax({
-        url: APP_PATH+"digital_objects/"+nodeEl.data("id"),
-        type: 'GET',
-        data: {
-          inline: true,
-          digital_object_id: digital_object_tree_data.digital_object_id
-        },
-        success: function(html) {
-          $container.html(html);
-          renderTreeToolbar();
-        }
-      });
-    }
-  };
-
-
-  var renderTreeToolbar = function() {
-    var nodeEl = $(location.hash.replace("tree::",""));
-    $("#archives_tree_toolbar").html(AS.renderTemplate("tree_toolbar_template"));
-    // render tree navigation
-    var allNodes = $tree.find("li");
-    var indexOfCurrentNode = allNodes.index(nodeEl);
-    var data = {};
-    if (indexOfCurrentNode !== 0) {
-      data.previous = allNodes.get(indexOfCurrentNode-1).id;
-    }
-    if (indexOfCurrentNode+1 < allNodes.length) {
-      data.next = allNodes.get(indexOfCurrentNode+1).id;
-    }
-    $(".btn-toolbar > .btn-group:first", "#archives_tree_toolbar").append(AS.renderTemplate("tree_nodenavigation_toolbar_template", data));
-  };
-
-
-  var addEventBindings = function() {
-    $(".archives-tree-container").on("click", ".expand-tree .btn", function() {
-      $(".archives-tree-container").addClass("expanded");
-      $(".archives-tree-container").animate({
-        width: $(".archives-tree-container").parents(".container:first").width()-5
-      }, 500);
-    });
-
-    $(".archives-tree-container").on("click", ".retract-tree .btn", function() {
-      $(".archives-tree-container").animate({
-        width: $(".archives-tree-container").parent().width()
-      }, 500, function() {
-        $(".archives-tree-container").removeClass("expanded");
-        $(".archives-tree-container").css("width", "auto");
-      });
-    });
-
-    $(window).hashchange(function(){
-      var $selected = $(location.hash.replace("tree::",""));
-      $(".selected", $tree).removeClass("selected");
-      $selected.addClass("selected");
-      $tree.jstree("deselect_all");
-      $tree.jstree("open_node", $selected);
-      $tree.jstree("select_node", $selected);
-
-      loadPaneForNode($selected);
-    });
-
-
-    var resizeArchivesTree = function() {
-      var height = $("#archives_tree").parent().height() - $("#archives_tree_toolbar").outerHeight() - 21;
-      $("#archives_tree").height(height);
-    }
-
-    $("#archives_tree").scroll(function() {
-      if ($(this).scrollTop() === 0) {
-        $(this).removeClass("overflow");
-      } else {
-        $(this).addClass("overflow");
-      }
-    });
-
-    if ($.cookie("archives-tree-container::height")) {
-      $(".archives-tree-container").height($.cookie("archives-tree-container::height"));
-    } else {
-      $(".archives-tree-container").height(AS.DEFAULT_TREE_PANE_HEIGHT);
-    }
-    setTimeout(resizeArchivesTree, 100);
-
-    $(".archives-tree-container").resizable({
-      handles: "s",
-      minHeight: 80,
-      resize: function(event, ui) {
-        $.cookie("archives-tree-container::height", ui.size.height, {path: "/"});
-        resizeArchivesTree();
-      }
-    });
-  };
-
-  var initTree = function() {
-    // init the archives tree
-    $tree = $(".archives-tree").jstree({
-
-      "themes": {
-        "theme": "default",
-        "url": "<%= asset_path('jstree/style.css') %>"
-      },
-      "ui": {
-        "selected_parent_close": false,
-        "selected_parent_open": true
-      },
-      "core": {
-        "animation": 100
-      },
-      "cookies": {
-        "save_selected": false
-      },
-      "plugins": [ "themes", "html_data", "ui", "cookies"]
-    }).bind("loaded.jstree", function (event, data) {
-      if (location.hash) {
-        $(location.hash.replace("tree::","")).addClass("selected");
-      }
-      if ($(".selected", $tree).length === 0) {
-        $("li:first", $tree).addClass("selected");
-      }
-
-      $tree.jstree("open_node", $(".selected", $tree), null, true);
-      $tree.jstree("select_node", $(".selected", $tree), null, true);
-      $(window).hashchange();
-    }).bind("select_node.jstree", function (event, data) {
-      var $nodeToSelect = $(data.rslt.obj);
-      if ($nodeToSelect.find("a").attr("href") === location.hash) {
-        return;
-      }
-
-      location.hash = $(data.rslt.obj).find("a").attr("href");
-    });
-  };
-
-  renderTree();
-  addEventBindings();
-  initTree();
-
-});
+//= require tree
