--- a/frontend/app/views/digital_objects/edit.html.erb
+++ b/frontend/app/views/digital_objects/edit.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-      <%= render :partial => "digital_objects/tree", :locals => {:selected => "digital_object"} %>
+    <%= render :partial => "shared/tree", :locals => {:object => @digital_object, :tree => @digital_object_tree, :child_jsonmodel_type => "digital_object_component"} %>
   </div>
 </div>
 
