--- a/frontend/app/views/archival_objects/forms/_basic_information.html.erb
+++ b/frontend/app/views/archival_objects/forms/_basic_information.html.erb
@@ -1,3 +1,8 @@
 <%= form.label_and_textfield "title" %>
-<%= form.label_and_textfield "ref_id" %>
+<% if form.obj["ref_id"].blank? %>
+  <%= form.label_and_readonly "ref_id", "<em>-- auto-generated upon save --</em>" %>
+<% else %>
+  <%= form.label_with_field "ref_id", "<span class='identifier-display'><span class='identifier-display-part'>#{form.obj["ref_id"]}</span></span>".html_safe, :controls_class => "label-only" %>
+<% end %>
+<%= form.hidden_input "ref_id" %>
 <%= render :partial => "subjects/linker", :locals => { :form => form }%>
