--- a/frontend/app/views/resources/_show_inline.html.erb
+++ b/frontend/app/views/resources/_show_inline.html.erb
@@ -17,12 +17,22 @@
             <div class="span3">Title</div>
             <div class="span9"><%= @resource.title %></div>
          </div>
+        <% if @resource.id_0 %>
          <div class="row-fluid label-and-value">
             <div class="span3">Identifier</div>
             <div class="span9 identifier-display">
                <span class="identifier-display-part"><%= @resource.id_0 %></span><span class="identifier-display-part"><%= @resource.id_1 %></span><span class="identifier-display-part"><%= @resource.id_2 %></span><span class="identifier-display-part"><%= @resource.id_3 %></span>
             </div>
          </div>
+        <% end %>
+        <% if @resource.ref_id %>
+          <div class="row-fluid label-and-value">
+            <div class="span3">Ref Id</div>
+            <div class="span9 identifier-display">
+              <span class="identifier-display-part"><%= @resource.ref_id %></span>
+            </div>
+          </div>
+        <% end %>
          <% if not @resource.subjects.blank? %>
          <hr/>
          <div class="row-fluid label-and-value">
