Add confirmation dialog and widget to support confirmation of suppress action; and add flash message partial to the read only view;

--- a/frontend/app/views/shared/_form_messages.html.erb
+++ b/frontend/app/views/shared/_form_messages.html.erb
@@ -71,9 +71,6 @@
    <% end %>
 <% end %>
 
-<% if flash[:success] %>
-   <div class="alert alert-success">
-      <%= flash[:success] %>
-   </div>
-<% end %>
+<%= render :partial => "shared/flash_messages" %>
+
 </div>
