--- a/frontend/app/views/accessions/show.html.erb
+++ b/frontend/app/views/accessions/show.html.erb
@@ -10,20 +10,22 @@
           <% if @accession.suppressed %>
             <% if user_can?('manage_repository') %>
               <div class="btn btn-inline-form">
-                <%= button_to 'Unsuppress', {:controller => :accessions, :action => :unsuppress, :id => @accession.id}, :method => :post, :class => "btn btn-small" %>
+                <%= button_to 'Unsuppress', {:controller => :accessions, :action => :unsuppress, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-primary",  :"data-confirmation" => true, :"data-title" => "Unsuppress this Accession?" %>
               </div>
             <% end %>
           <% else %>
             <%= link_to "Edit", {:controller => :accessions, :action => :edit, :id => @accession.id}, :class => "btn btn-small" %>
             <% if user_can?('manage_repository') %>
               <div class="btn btn-inline-form">
-                <%= button_to 'Suppress', {:controller => :accessions, :action => :suppress, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-warning" %>
+                <%= button_to 'Suppress', {:controller => :accessions, :action => :suppress, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-danger", :"data-confirmation" => true, :"data-title" => "Suppress this Accession?" %>
               </div>
             <% end %>
           <% end %>
           </div>
         <% end %>
         <h2><%= @accession.title %> <span class="label label-info">Accession</span></h2>
+
+       <%= render :partial => "shared/flash_messages" %>
 
         <section id="basic_information">
           <h3>Basic Information</h3>
