Redirect to #show from #edit if @accession is read only/suppressed

--- a/frontend/app/views/shared/_flash_messages.html.erb
+++ b/frontend/app/views/shared/_flash_messages.html.erb
@@ -13,3 +13,8 @@
     <%= flash[:error] %>
   </div>
 <% end %>
+<% if flash[:info] %>
+  <div class="alert alert-info">
+    <%= flash[:info] %>
+  </div>
+<% end %>
