--- a/frontend/app/views/events/index.html.erb
+++ b/frontend/app/views/events/index.html.erb
@@ -21,10 +21,13 @@
            <tbody>
               <% @events.each do |event| %>
               <tr>
-               <td><%= event.id %></td>
+               <td>
+                <% if event.suppressed %><span class="label label-info">Suppressed</span><% end %>
+                <%= event.id %>
+               </td>
                <td>
                   <div class="btn-group" style="float: right">
-                    <% if user_can?('update_repository') %>
+                    <% if user_can?('update_repository') and not event.suppressed %>
                       <%= link_to "Edit", {:controller => :events, :action => :edit, :id => event.id}, :class => "btn btn-mini" %>
                     <% end %>
                   </div>
