Fix tokeninput search not highlighting token text with query string

--- a/frontend/app/assets/stylesheets/archivesspace/token-input.less
+++ b/frontend/app/assets/stylesheets/archivesspace/token-input.less
@@ -35,6 +35,9 @@ ul.token-input-list {
 
 ul.token-input-list li {
   list-style-type: none;
+  white-space: normal;
+  position: relative;
+  padding-right: 20px;
 }
 
 ul.token-input-list li input {
@@ -87,7 +90,9 @@ li.token-input-token p {
 }
 
 li.token-input-token .token-input-delete-token {
-  float: right;
+  position: absolute;
+  right: 5px;
+  top: 2px;
   color: #777;
   cursor: pointer;
 }
