--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -76,7 +76,8 @@
       background-position: -456px -96px !important;
     }
 
-    .resource > a > .jstree-icon {
+    .resource > a > .jstree-icon,
+    .icon-resource  {
       background-position: -264px -24px !important;
     }
   }
